<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="message" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="mailMessage" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mailTe" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="setting" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>
    <string name="artist" translatable="false">Artist</string>
    <string name="trackName" translatable="false">TrackName</string>
    <string name="time" translatable="false">00:00</string>
    <string name="not_found" translatable="false">Ничего не нашлось</string>
    <string name="not_internet" translatable="false">Проблемы со связью\n\n Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="history" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="media_null" translatable="false">Ваша медиатека пуста</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="playlists_null" translatable="false">Вы не создали\n\n ни одного плейлиста</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <string name="favorites" translatable="false">Избранные треки</string>
    <string name="favorites_name" translatable="false">Название*</string>
    <string name="description" translatable="false">Описание</string>
    <string name="create" translatable="false">Создать</string>
    <string name="zero_track" translatable="false">0 треков</string>
    <string name="favorite_view_name" translatable="false">Наименование</string>
    <string name="add_in_playlist" translatable="false">Добавить в плейлист</string>
    <string name="playlist_created" translatable="false">Плейлист успешно создан</string>
    <string name="playlist_complete" translatable="false">Завершить создание плейлиста?</string>
    <string name="playlist_cancel" translatable="false">Отмена</string>
    <string name="playlist_lost" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="playlist_complete_btn" translatable="false">Завершить</string>
    <string name="error" translatable="false">Ошибка</string>
    <string name="playlist_name" translatable="false">Название плейлиста</string>
    <string name="playlist_description" translatable="false">Описание плейлиста</string>
    <string name="playlist_duration" translatable="false">300 минут</string>
    <string name="playlist_count_track" translatable="false">300 треков</string>
    <string name="delete_track_title" translatable="false">Хотите удалить трек?</string>
    <string name="shared" translatable="false">Поделиться</string>
    <string name="edit" translatable="false">Редактировать информацию</string>
    <string name="delete" translatable="false">Удалить плейлист</string>
    <string name="no" translatable="false">Нет</string>
    <string name="yes" translatable="false">Да</string>
    <string name="delete_playlist_title" translatable="false">Удалить плейлист</string>
    <string name="delete_playlist_message" translatable="false">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="delete_btn" translatable="false">Удалить</string>
    <string name="edit_playlist_title" translatable="false">Редактировать</string>
    <string name="edit_playlist_save_button" translatable="false">Сохранить</string>
    <string name="load_service" translatable="false">Подготовка воспроизведения</string>
    <string name="music_service" translatable="false">Music service</string>
    <string name="music_service_description" translatable="false">Service for playing music</string>

    <plurals name="tracks_count" translatable="false">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="tracks_duration" translatable="false">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>


</resources>