<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    android:paddingBottom="@dimen/radiusSize_16dp"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <!-- Настройки-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="?attr/colorOnPrimaryContainer"
        style="@style/SettingText"
        app:title="@string/setting"
        app:titleTextAppearance="@style/TextAppearance.ToolbarTitle.Normal" />

    <!-- Поделиться -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingSwitch"
        style="@style/SettingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/radiusSize_16dp"
        android:paddingVertical="@dimen/night_padding"
        android:text="@string/dark_theme"
        app:thumbTint="@color/selector_switch_thumb"
        app:trackTint="@color/selector_switch_track" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingViews"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            style="@style/SettingText" />

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                app:tint="?attr/colorPrimaryVariant"
                android:layout_marginEnd="@dimen/ic_padding" />
    </LinearLayout>
    <!-- Поддержка -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingViews"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            style="@style/SettingText" />

            <ImageView
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/support"
                app:tint="?attr/colorPrimaryVariant"
                android:layout_marginEnd="@dimen/ic_padding" />

    </LinearLayout>
    <!-- Соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingViews"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agreement"
            style="@style/SettingText" />

            <ImageView
                android:id="@+id/agreementButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/agreement"
                app:tint="?attr/colorPrimaryVariant"
                android:layout_marginEnd="@dimen/ic_padding" />
    </LinearLayout>
</LinearLayout>