<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="@dimen/radiusSize"
    android:paddingBottom="@dimen/radiusSize">

    <!-- Настройки-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/setting"
        app:navigationIcon="@drawable/light_modesetting"
        app:titleTextAppearance="@style/TextAppearance.ToolbarTitle.Normal" />


    <!-- Темная тема -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:textColor="?attr/colorOnBackground"
        android:fontFamily="@font/ys_display_regular"
        app:thumbTint="@color/selector_switch_thumb"
        app:trackTint="@color/selector_switch_track"
        android:text="@string/dark_theme"
        android:textSize="16sp" />


    <!-- Поделиться -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:paddingTop="@dimen/radiusSize"
        android:paddingStart="@dimen/radiusSize"
        android:paddingBottom="@dimen/radiusSize"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/setting_text" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:layout_marginEnd="@dimen/ic_padding" />
        </FrameLayout>
    </LinearLayout>

    <!-- Поддержка -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:paddingTop="@dimen/radiusSize"
        android:paddingStart="@dimen/radiusSize"
        android:paddingBottom="@dimen/radiusSize"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_text" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/support"
                android:layout_marginEnd="@dimen/ic_padding" />
        </FrameLayout>
    </LinearLayout>

    <!-- Соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clipChildren="false"
        android:paddingTop="@dimen/radiusSize"
        android:paddingStart="@dimen/radiusSize"
        android:paddingBottom="@dimen/radiusSize"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agreement"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/setting_text" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/agreementButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/agreement"
                android:layout_marginEnd="@dimen/ic_padding" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>