<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:paddingBottom="@dimen/radiusSize_16dp"
    tools:context="com.practicum.playlistmaker.player.ui.PlayerFragment">

    <!-- Назад-->
    <ImageButton
        android:id="@+id/iv_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/back_button_"
        app:tint="?attr/colorPrimaryVariant"
        android:src="@drawable/light_modesetting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Новый плейлист-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarFavorites"
        android:layout_width="@dimen/zerodp"
        android:layout_height="wrap_content"
        app:titleTextColor="?attr/colorOnPrimaryContainer"
        style="@style/FavoritesText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/TextAppearance.ToolbarTitle.Normal" />

    <ImageButton
        android:id="@+id/ib_image"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        android:src="@drawable/favorites_image_album"
        android:background="@drawable/favorites_info_image_bg"
        android:layout_marginTop="@dimen/album_padding"
        android:layout_marginStart="@dimen/search_not_internet_24dp"
        android:layout_marginEnd="@dimen/search_not_internet_24dp"

        app:layout_constraintHeight_percent="0.43"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/toolbarFavorites"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/favorites_name"
        android:background="@drawable/favorites_info_name_bg"
        android:paddingTop="@dimen/ic_padding"
        android:paddingBottom="@dimen/ic_padding_"
        android:paddingStart="@dimen/radiusSize_16dp"
        android:paddingEnd="@dimen/radiusSize_16dp"
        android:layout_marginTop="@dimen/tv_search_history"
        android:layout_marginStart="@dimen/radiusSize_16dp"
        android:layout_marginEnd="@dimen/radiusSize_16dp"
        style="@style/FavoritesTextName"
        app:layout_constraintTop_toBottomOf="@id/ib_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:background="@drawable/favorites_info_name_bg"
        android:paddingTop="@dimen/ic_padding"
        android:paddingBottom="@dimen/ic_padding_"
        android:paddingStart="@dimen/radiusSize_16dp"
        android:paddingEnd="@dimen/radiusSize_16dp"
        android:layout_margin="@dimen/radiusSize_16dp"
        style="@style/FavoritesTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginStart="@dimen/favorite_17dp"
        android:layout_marginEnd="@dimen/favorite_17dp"
        android:layout_marginBottom="@dimen/tv_search_history"

        android:gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/favorites_info_btn_bg"
        style="@style/FavoritesTextCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>